fixed pure button quotes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 <form class="pure-form">
     <fieldset>
         <input type="number" name="zip" placeholder="92116"[CA] autofocus required>
-        <input type="submit" class="pure-button[CA]" pure-button-primary value="Go">
+        <input type="submit" class="pure-button[CA] pure-button-primary" value="Go">
     </fieldset>
 </form>
 
