fixed missing main.js script tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,6 @@
 </form>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="main.js"></script>
 
 <% include footer %>
